k8s/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: qotd
  namespace: pipelines-tutorial
spec:
  selector:
    app: qotd
  replicas: 1
  template:
    metadata:
      labels:
        app: qotd
    spec:
      containers:
        - name: qotd
          image: image-registry.openshift-image-registry.svc:5000/pipelines-tutorial/qotd:latest
          ports:
            - containerPort: 10000
