k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: qotd
  name: qotd
spec:
  ports:
  - name: 10000-tcp
    port: 10000
    protocol: TCP
    targetPort: 10000
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    app: qotd
    deploymentconfig: qotd
  sessionAffinity: None
  type: NodePort
